clusters/proxmox-home/apps/archivebox/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: archivebox-ingress
  namespace: archivebox
  labels:
    app.kubernetes.io/name: archivebox-ingress
    app.kubernetes.io/component: ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - archive.mgsds.com
      secretName: archive.mgsds.com-tls
  rules:
    - host: archive.mgsds.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: archivebox
                port:
                  number: 80
